--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "scripts": {
-  "start": "node app.js"
-},
+    "start": "node login.js"
+  },
   "dependencies": {
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3"
   }
-  
 }
+
